2005-09-27  Ben Wing  <ben@xemacs.org>

	* text.c (wcscmp_ascii):
	* text.c (COPY_TEXT_BETWEEN_FORMATS):
	* event-Xt.c (x_event_to_emacs_event):
	* event-Xt.c (ShellVisualPatch):
	* lisp.h:
	* lisp.h (assert_with_message):
	* number-gmp.c (bigfloat_to_string):
	* number-gmp.h:
	Fix compilation warnings.  A couple of changes of new -> new_,
	'foo -> `foo'.

2005-09-26  Ben Wing  <ben@xemacs.org>

	* specifier.c:
	* specifier.c (Fvalid_specifier_type_p):
	* specifier.c (Fvalid_specifier_locale_p):
	* specifier.c (Fvalid_specifier_domain_p):
	* specifier.c (Fvalid_specifier_locale_type_p):
	* specifier.c (Fdefine_specifier_tag):
	* specifier.c (specifier_get_external_inst_list):
	* specifier.c (Fspecifier_specs):
	* specifier.c (Fspecifier_fallback):
	* specifier.c (specifier_instance_from_inst_list):
	* specifier.c (CHECK_INSTANCE_ENTRY):
	* specifier.c (specifier_instance_1):
	* specifier.c (specifier_instance):
	* specifier.c (specifier_matching_foo):
	* specifier.c (Fspecifier_instance):
	* specifier.c (Fspecifier_instantiator):
	* specifier.c (Fspecifier_matching_instance):
	* specifier.c (specifier_matching_foo_from_inst_list):
	* specifier.c (syms_of_specifier):
	Add `specifier-instantiator' and related primitives.

2005-09-26  Ben Wing  <ben@xemacs.org>

	* rangetab.c:
	* rangetab.c (Fmap_range_table):
	Fix bug in handling of range endpoints when not start-closed, end-open.

2005-09-17  Olivier Galibert  <galibert@xemacs.org>

	* intl.c (Fset_current_locale): setlocale return string is valid
	only until the next setlocale call.

2005-09-12  Mike Alexander  <mta@arbortext.com>

	* intl-win32.c (mswindows_current_locale): Define in non-MULE
	build.

2005-09-14  Marcus Crestani  <crestani@xemacs.org>

	* mc-alloc.c (set_lookup_table): Adjust parameter to other memset
	calls.
	* mc-alloc.c (init_mc_allocator): Zero global allocator structure.

2005-09-14  Stephen J. Turnbull  <stephen@xemacs.org>

	* XEmacs 21.5.22 "cucumber" is released.
